@@ -2,10 +2,10 @@ package com.example.platforme.services;
 
 import com.example.platforme.models.Utilisateur;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.List;
+import java.util.Collection;
+import java.util.Collections;
 
 public class UserInfoDetails implements UserDetails {
 
@@ -16,14 +16,37 @@ public class UserInfoDetails implements UserDetails {
     }
 
     @Override
-    public List<GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + utilisateur.getRole()));
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return Collections.emptyList(); // Pas de rôles pour l'instant
     }
 
-    @Override public String getPassword() { return utilisateur.getPassword(); }
-    @Override public String getUsername() { return utilisateur.getEmail(); }
-    @Override public boolean isAccountNonExpired() { return true; }
-    @Override public boolean isAccountNonLocked() { return true; }
-    @Override public boolean isCredentialsNonExpired() { return true; }
-    @Override public boolean isEnabled() { return true; }
+    @Override
+    public String getPassword() {
+        return utilisateur.getPassword();
+    }
+
+    @Override
+    public String getUsername() {
+        return utilisateur.getEmail(); // on utilise l'email comme username
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
 }
